# ines-flextool

./: README.md  input_data.sqlite  setup.cfg
.spinetoolbox/: project.json
.spinetoolbox/specifications/Tool/: ines_to_flextool.json
ines_flextool/: ines_to_flextool.py  ines_to_flextool_entities.yaml  ines_to_flextool_methods.yaml  ines_to_flextool_parameters.yaml
